# Laboratorio

./: CMakeLists.txt  Chat.cpp  Chat.h  Messaggio.h  MessaggioNonLetto.cpp  MessaggioNonLetto.h  NotificaMessaggio.cpp  NotificaMessaggio.h  Observer.h  Subject.h  Utente.cpp  Utente.h  main.cpp
test/: CMakeLists.txt  TestChat.cpp  TestMessaggio.cpp  TestNotificaMessaggio.cpp  TestUtente.cpp  runAllTests.cpp
